added css style

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="image" content="images/michelleandalexander.jpg">
+    <meta name="url" content="www.alexander-michelle.com" <link rel="canonical" href="index.html">
+    <meta name="description" content="Michelle and Alexander's wedding page">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Michelle &amp; Alexander</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/home.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,13 +22,19 @@
 </head>
 
 <body>
-    <center>
-    <h1>Welcome to Michelle and Alexander's wedding page</h1>
-    <br>
-    <img class = "main-pic" src="images/michelleandalexander.jpg">
-    <br>
-    <p>This page is currently under construction </p>
-    </center>
+    <section id="title">
+        <center>
+            <h1>We are getting married!</h1>
+        </center>
+        <br>
+    </section>
+    <section id="intro">
+        <center>
+            <img class="main-pic" src="images/michelleandalexander.jpg">
+            <br>
+            <p>This page is currently under construction </p>
+        </center>
+    </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
