added bootstrap files in css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="image" content="images/michelleandalexander.jpg">
     <meta name="url" content="www.alexander-michelle.com" <link rel="canonical" href="index.html">
     <meta name="description" content="Michelle and Alexander's wedding page">
@@ -12,7 +12,7 @@
     <title>Michelle &amp; Alexander</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
+    <link href="css/home.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
