--- a/index.html
+++ b/index.html
@@ -23,19 +23,26 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<!-- Navigation for the desktop -->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="collapse navbar-collapse">
+<div class="navbar navbar-default " id="main_menu" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button class="navbar-toggle" data-target=".navbar-menubuilder" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse navbar-menubuilder">
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Venue</a></li>
-                <li><a href="#">Travel</a></li>
-                <li><a href="#">Info</a></li>
+                <li class="active"><a href="https://www.blogger.com/">Bride &amp; Groom</a>
+                </li>
+                <li><a href="https://www.blogger.com/products">Wedding</a>
+                </li>
+                <li><a href="https://www.blogger.com/about-us">Travel</a>
+                </li>
+                <li><a href="https://www.blogger.com/contact">Registry</a>
+                </li>
             </ul>
         </div>
     </div>
-</nav>
+</div>
 
 <body>
     <section id="title">
