changed website design

--- a/index.html
+++ b/index.html
@@ -1,62 +1,250 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
+<html>
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<!-- /Added by HTTrack -->
 
 <head>
-    <title>M + A Wedding</title>
+    <title> M + A Wedding</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Michelle and Alexander's Wedding Page">
+    <!-- <meta name="keywords" content="Alexander, Lee, Rivera, development, design, programming, code, coding, java, css, html, c, mysql, javascript, github, android, ios, objective-c, python, space, NASA, nasa, opencv, computer vision " /> -->
     <meta name="image" content="images/michelleandalexander.jpg">
-    <meta name="url" content="www.alexander-michelle.com" <link rel="canonical" href="index.html">
-    <meta name="description" content="Michelle and Alexander's wedding page">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/home.css" rel="stylesheet">
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <meta name="url" content="alexander-michelle.com" <link rel="canonical" href="index.html">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link href="font-awesome-4.5.0/css/font-awesome.css" rel="stylesheet">
+    <link href="font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/overrides.css">
+    <link rel="stylesheet" href="css/nojs.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/analytics.js"></script>
+    <script src="js/viewportchecker.js"></script>
+    <script src="js/pushy.min.js"></script>
+    <script src="js/modernizr.js"></script>
+    <script src="js/main.js"></script>
 </head>
-<div class="navbar navbar-default " id="main_menu" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button class="navbar-toggle" data-target=".navbar-menubuilder" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-            </button>
+
+<body>
+    <!-- This is for the desktop navigation -->
+    <section class="navigation">
+        <a id="navicon" class="animated fadeInLeft closed menu-btn"></a>
+        <div id="" class="nav pushy pushy-left" class="fa fa-bars">
+            <ul>
+                <li>
+                    <a class="introduction" href="#">
+                        <i class="fa fa-angle-up"></i>Home
+                    </a>
+                </li>
+                <li>
+                    <a class="about" href="#">
+                        <i class="fa fa-user"></i> The Bride &amp; Groom
+                    </a>
+                </li>
+                <li>
+                    <a class="interests" href="#">
+                        <i class="fa fa-terminal"></i>Wedding
+                    </a>
+                </li>
+                <li>
+                    <a class="work" href="#">
+                        <i class="fa fa-suitcase"></i>Travel
+                    </a>
+                </li>
+                <li>
+                    <a class="contact" href="#">
+                        <i class="fa fa-envelope-o"></i>Registry
+                    </a>
+                </li>
+            </ul>
+            <div class="dash"></div>
         </div>
-        <div class="collapse navbar-collapse navbar-menubuilder">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="https://www.blogger.com/">Bride &amp; Groom</a>
+    </section>
+    <div class="site-overlay"></div>
+    <!-- This is for the mobile navigation -->
+    <section id="introduction">
+        <div class="small-nav nav">
+            <ul>
+                <li>
+                    <a class="introduction" href="#introduction">Home</a>
                 </li>
-                <li><a href="https://www.blogger.com/products">Wedding</a>
+                <li>
+                    <a class="about" href="#about">The Bride &amp; Groom</a>
                 </li>
-                <li><a href="https://www.blogger.com/about-us">Travel</a>
+                <li> <a class="interests" href="#interests">Wedding</a>
                 </li>
-                <li><a href="https://www.blogger.com/contact">Registry</a>
+                <li>
+                    <a class="work" href="#work">Travel</a>
+                </li>
+                <li>
+                    <a class="contact" href="#contact">Registry</a>
                 </li>
             </ul>
         </div>
-    </div>
-</div>
-
-<body>
-    <section id="title">
-        <center>
-            <h1>We are getting married!</h1>
-        </center>
-        <br>
+        <div class="brand">
+            <h1 class="animated fadeInUp">We are getting married!</h1>
+            <h2 class="animated fadeInUp">May 26th, 2017</h2>
+        </div>
     </section>
-    <section id="intro">
-        <center>
-            <img class="img-responsive" src="images/michelleandalexander.jpg">
-            <br>
-            <p>This page is currently under construction </p>
-        </center>
+    <section id="about">
+        <div class="container">
+            <div class="col-md-12 center">
+                <img class="profile-pic" src="images/propose.jpg">
+                <h1>The Engagement</h1>
+                <div class="dash animated fadeIn"></div>
+                <p>
+                    <br> It was a dark and stomry night...
+                    <div class="dash animated fadeIn"></div>
+                    <p>
+                        See the video of the proposal!
+                    </p>
+                    <p>
+                        <a href="resume/Alexander_Rivera_Resume.pdf" target="_blank" class="fa fa-file-text"></a>
+                    </p>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section id="interests">
+        <div class="container">
+            <h1 class="tabloid">Wedding</h1>
+            <div class="row">
+                <div class="column col-md-6">
+                    <div class="flaticon">
+                        <i class="fa fa-terminal"></i>
+                    </div>
+                    <h3>Development</h3>
+                    <div class="dash"></div>
+                    <p>
+                        Currently, I'm working at NASA as a research and development intern to develop a collision detection alogorithm for autonomous drones. I have experience in building mobile applications for <strong>Android</strong> and <strong>iOS</strong>. For databases, I've worked with <strong>MySQL</strong>. I have experience using <strong> Java, C, Python, HTML</strong> and <strong>CSS</strong>. I'm currently self teaching <strong>Swift </strong>and <strong>Javascript</strong>. I always have had an interest in hardware so I like to work with <strong>Arduino</strong> as well.
+                    </p>
+                    <div class="dash"></div>
+                </div>
+                <div class="column col-md-6">
+                    <div class="flaticon">
+                        <i class="fa fa-child"></i>
+                    </div>
+                    <h3>Volunteer</h1>
+
+        <div class="dash"></div>
+
+        <p>
+          To quote Winston Churchill, "We make a living by what we get, but we make a life by what we give". I firmly believe in helping others to help make a difference. For most of my academic career at Temple, I have volunteered for a non-profit organization called  <strong><a href="http://www.letsgetready.org" target="_blank">Let's Get Ready!</a></strong>. It has been an amazing experience to bond with students and help them reach their dreams of attending college while exposing them to STEM related fields.
+        </p>
+
+        <div class="dash"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="column col-md-6">
+        <div class="flaticon">
+          <i class="fa fa-space-shuttle"></i>
+        </div> 
+                    <h3>Everything Space</h3>
+                    <div class="dash"></div>
+                    <p>
+                        Since I was younger I have always had a fascination with space that went into warp drive once I began taking physics. My dream is to one day explore the final frontier, hopefully with <strong><a href="https://en.wikipedia.org/wiki/Neil_deGrasse_Tyson" target="_blank"> Neil deGrasse Tyson</a></strong>. I'm always up for conversations regarding space, physics and science in general.
+                    </p>
+                    <div class="dash"></div>
+                </div>
+                <div class="column col-md-6">
+                    <div class="flaticon">
+                        <i class="fa fa-code-fork"></i>
+                    </div>
+                    <h3>Open Source</h3>
+                    <div class="dash"></div>
+                    <p>
+                        Without open source software, we would not have all of the amazing tools we use today. I have had the opporunity to work on open-source projects with organizations such as <strong><a href="http://philadelphiagamelab.org" target="_blank">Philadelphia Game Lab</a></strong> to help contribute to the community.
+                    </p>
+                    <div class="dash"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="work">
+        <div class="container">
+            <h1>Travel</h1>
+            <div class="lcol-lg-11 col-centered">
+                <div class="item item-1">
+                    <h3><a href="https://github.com/ariveralee/Oto-run" target="_blank">Oto-Run</a></h3>
+                    <img src="images/projectimages/otorun.png" class="img-responsive">
+                    <p> travel accomendations yo..
+                    </p>
+                </div>
+            </div>
+            <!-- <div class="right col-md-4">
+                <h1>Skills</h1>
+                <h2>Languages</h2>
+                <div class="bars">
+                    <div class="bar">Java, C, Python</div>
+                    <div class="bar">C++, Swift</div>
+                    <div class="bar">MySQL, HTML, CSS, Javascript</div>
+                </div>
+                <h2>Frameworks</h2>
+                <div class="bars">
+                    <div class="bar">Android, iOS</div>
+                    <div class="bar">Django, Arduino, jMonkey, Unity</div>
+                </div>
+                <h2> Libraries</h2>
+                <div class="bars">
+                    <div class="bar">OpenCV</div>
+                </div>
+            </div> -->
+            <div class="clearfix"></div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="container">
+            <!-- could put an icon here -->
+            <h1>Interested<div>?</div></h1>
+            <p>If you want to collaborate or just want to say hello, feel free to contact mission control.</p>
+            <a class="contact" href="mailto:ariveralee@gmail.com">
+            Mission Control
+            </a>
+        </div>
+    </section>
+    <section id="footer">
+        <div class="container">
+            <h3>Registry</h3>
+            <ul>
+                <!-- removed to make the page more streamlined -->
+                <!-- <li class="email">
+                    <a href="mailto:ariveralee@gmail.com">
+                        <i class="fa fa-envelope-o"></i>
+                        <p>
+                            ariveralee@gmail.com
+                        </p>
+                    </a>
+                </li> -->
+                <li class="github">
+                    <a href="https://github.com/ariveralee" target="_blank">
+                        <i class="fa fa-github"></i>
+                        <p>GitHub</p>
+                    </a>
+                </li>
+                <li class="linkedin">
+                    <a href="https://linkedin.com/in/ariveralee" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                        <p>Linkedin</p>
+                    </a>
+                </li>
+                <li class="twitter">
+                    <a href="https://twitter.com/arivera_lee" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                        <p>Twitter</p>
+                    </a>
+                </li>
+            </ul>
+            <div class="license">
+                2016 © Alexander L. Rivera
+            </div>
+        </div>
     </section>
 </body>
 
