various changes to site, fixed containers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Michelle and Alexander's Wedding Page">
-    <!-- <meta name="keywords" content="Alexander, Lee, Rivera, development, design, programming, code, coding, java, css, html, c, mysql, javascript, github, android, ios, objective-c, python, space, NASA, nasa, opencv, computer vision " /> -->
+    <meta name="keywords" content="Alexander Lee Rivera, Michelle Surillo, , Rivera Wedding, Surillo Wedding, Wedding, William Penn Inn, Rivera Surillo Wedding" />
     <meta name="image" content="images/michelleandalexander.jpg">
     <meta name="url" content="alexander-michelle.com" <link rel="canonical" href="index.html">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/overrides.css">
     <link rel="stylesheet" href="css/nojs.css">
+    <link rel="stylesheet" href="css/whhg.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/viewportchecker.js"></script>
@@ -38,26 +39,26 @@
             <ul>
                 <li>
                     <a class="introduction" href="#">
-                        <i class="fa fa-angle-up"></i>Home
+                        <i class="fa fa-home"></i>Home
                     </a>
                 </li>
                 <li>
                     <a class="about" href="#">
-                        <i class="fa fa-user"></i> The Bride &amp; Groom
+                        <i class="fa fa-user"></i> Bride &amp; Groom
                     </a>
                 </li>
                 <li>
                     <a class="interests" href="#">
-                        <i class="fa fa-terminal"></i>Wedding
-                    </a>
-                </li>
-                <li>
-                    <a class="work" href="#">
-                        <i class="fa fa-suitcase"></i>Travel
+                        <i class="fa fa-heart"></i>Wedding
                     </a>
                 </li>
                 <li>
                     <a class="contact" href="#">
+                        <i class="fa fa-suitcase"></i>Travel
+                    </a>
+                </li>
+                <li>
+                    <a class="footer" href="#">
                         <i class="fa fa-envelope-o"></i>Registry
                     </a>
                 </li>
@@ -74,7 +75,7 @@
                     <a class="introduction" href="#introduction">Home</a>
                 </li>
                 <li>
-                    <a class="about" href="#about">The Bride &amp; Groom</a>
+                    <a class="about" href="#about">Bride &amp; Groom</a>
                 </li>
                 <li> <a class="interests" href="#interests">Wedding</a>
                 </li>
@@ -94,8 +95,22 @@
     <section id="about">
         <div class="container">
             <div class="col-md-12 center">
-                <img class="profile-pic" src="images/propose.jpg">
+                <h1>Our Story</h1>
+                <div class="dash animated fadeIn"></div>
+                <h3> This site is currently under construction! </h3>
+                <br>
+                <div class="dash animated fadeIn"></div>
+                <p>Maybe it was love at first sight..
+                </p>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section id="about">
+        <div class="container">
+            <div class="col-md-12 center">
                 <h1>The Engagement</h1>
+                <img class="profile-pic" src="images/propose.jpg">
                 <div class="dash animated fadeIn"></div>
                 <p>
                     <br> It was a dark and stomry night...
@@ -104,7 +119,9 @@
                         See the video of the proposal!
                     </p>
                     <p>
-                        <a href="resume/Alexander_Rivera_Resume.pdf" target="_blank" class="fa fa-file-text"></a>
+                        <br>
+                        <a href="#" <i class="fa fa-heart"></i>
+                        </a>
                     </p>
             </div>
         </div>
@@ -116,128 +133,48 @@
             <div class="row">
                 <div class="column col-md-6">
                     <div class="flaticon">
-                        <i class="fa fa-terminal"></i>
+                        <i class="fa fa-heart-o"></i>
                     </div>
-                    <h3>Development</h3>
+                    <h3>Ceremony</h3>
                     <div class="dash"></div>
                     <p>
-                        Currently, I'm working at NASA as a research and development intern to develop a collision detection alogorithm for autonomous drones. I have experience in building mobile applications for <strong>Android</strong> and <strong>iOS</strong>. For databases, I've worked with <strong>MySQL</strong>. I have experience using <strong> Java, C, Python, HTML</strong> and <strong>CSS</strong>. I'm currently self teaching <strong>Swift </strong>and <strong>Javascript</strong>. I always have had an interest in hardware so I like to work with <strong>Arduino</strong> as well.
+                        The ceremony is at William Penn inn
                     </p>
                     <div class="dash"></div>
                 </div>
                 <div class="column col-md-6">
                     <div class="flaticon">
-                        <i class="fa fa-child"></i>
+                        <i class="fa fa-glass"></i>
                     </div>
-                    <h3>Volunteer</h1>
-
-        <div class="dash"></div>
-
-        <p>
-          To quote Winston Churchill, "We make a living by what we get, but we make a life by what we give". I firmly believe in helping others to help make a difference. For most of my academic career at Temple, I have volunteered for a non-profit organization called  <strong><a href="http://www.letsgetready.org" target="_blank">Let's Get Ready!</a></strong>. It has been an amazing experience to bond with students and help them reach their dreams of attending college while exposing them to STEM related fields.
-        </p>
-
-        <div class="dash"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="column col-md-6">
-        <div class="flaticon">
-          <i class="fa fa-space-shuttle"></i>
-        </div> 
-                    <h3>Everything Space</h3>
+                    <h3>Reception</h3>
                     <div class="dash"></div>
                     <p>
-                        Since I was younger I have always had a fascination with space that went into warp drive once I began taking physics. My dream is to one day explore the final frontier, hopefully with <strong><a href="https://en.wikipedia.org/wiki/Neil_deGrasse_Tyson" target="_blank"> Neil deGrasse Tyson</a></strong>. I'm always up for conversations regarding space, physics and science in general.
-                    </p>
-                    <div class="dash"></div>
-                </div>
-                <div class="column col-md-6">
-                    <div class="flaticon">
-                        <i class="fa fa-code-fork"></i>
-                    </div>
-                    <h3>Open Source</h3>
-                    <div class="dash"></div>
-                    <p>
-                        Without open source software, we would not have all of the amazing tools we use today. I have had the opporunity to work on open-source projects with organizations such as <strong><a href="http://philadelphiagamelab.org" target="_blank">Philadelphia Game Lab</a></strong> to help contribute to the community.
+                        This is also at the william penn inn
                     </p>
                     <div class="dash"></div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="work">
-        <div class="container">
-            <h1>Travel</h1>
-            <div class="lcol-lg-11 col-centered">
-                <div class="item item-1">
-                    <h3><a href="https://github.com/ariveralee/Oto-run" target="_blank">Oto-Run</a></h3>
-                    <img src="images/projectimages/otorun.png" class="img-responsive">
-                    <p> travel accomendations yo..
-                    </p>
-                </div>
-            </div>
-            <!-- <div class="right col-md-4">
-                <h1>Skills</h1>
-                <h2>Languages</h2>
-                <div class="bars">
-                    <div class="bar">Java, C, Python</div>
-                    <div class="bar">C++, Swift</div>
-                    <div class="bar">MySQL, HTML, CSS, Javascript</div>
-                </div>
-                <h2>Frameworks</h2>
-                <div class="bars">
-                    <div class="bar">Android, iOS</div>
-                    <div class="bar">Django, Arduino, jMonkey, Unity</div>
-                </div>
-                <h2> Libraries</h2>
-                <div class="bars">
-                    <div class="bar">OpenCV</div>
-                </div>
-            </div> -->
-            <div class="clearfix"></div>
-        </div>
     </section>
     <section id="contact">
         <div class="container">
-            <!-- could put an icon here -->
-            <h1>Interested<div>?</div></h1>
-            <p>If you want to collaborate or just want to say hello, feel free to contact mission control.</p>
-            <a class="contact" href="mailto:ariveralee@gmail.com">
-            Mission Control
-            </a>
-        </div>
+            <i class="fa fa-suitcase"> </i>
+            <h1>Travel</h1>
+            <p>We know drinking is fun, Sometimes it's so fun that you forget to stop. So here's a list of hotels in the area:</p>
     </section>
     <section id="footer">
         <div class="container">
             <h3>Registry</h3>
             <ul>
-                <!-- removed to make the page more streamlined -->
-                <!-- <li class="email">
-                    <a href="mailto:ariveralee@gmail.com">
-                        <i class="fa fa-envelope-o"></i>
-                        <p>
-                            ariveralee@gmail.com
-                        </p>
-                    </a>
-                </li> -->
                 <li class="github">
-                    <a href="https://github.com/ariveralee" target="_blank">
-                        <i class="fa fa-github"></i>
-                        <p>GitHub</p>
+                    <a href="https://www.target.com" target="_blank">
+                        <i class="fa fa-bullseye"></i>
+                        <p>Target</p>
                     </a>
                 </li>
                 <li class="linkedin">
-                    <a href="https://linkedin.com/in/ariveralee" target="_blank">
-                        <i class="fa fa-linkedin"></i>
-                        <p>Linkedin</p>
-                    </a>
-                </li>
-                <li class="twitter">
-                    <a href="https://twitter.com/arivera_lee" target="_blank">
-                        <i class="fa fa-twitter"></i>
-                        <p>Twitter</p>
+                    <a href="https://amazon.com" target="_blank">
+                        <i class="fa fa-amazon"></i>
+                        <p>Amazon</p>
                     </a>
                 </li>
             </ul>
