updated fonts on page and image

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section id="about">
         <div class="container">
             <div class="col-md-12 center">
-                <h1>Our Story</h1>
+                <h1><i>Our Story</i></h1>
                 <div class="dash animated fadeIn"></div>
                 <h3> This site is currently under construction! </h3>
                 <br>
@@ -129,7 +129,7 @@
     </section>
     <section id="interests">
         <div class="container">
-            <h1 class="tabloid">Wedding</h1>
+            <h1>Wedding</h1>
             <div class="row">
                 <div class="column col-md-6">
                     <div class="flaticon">
@@ -157,7 +157,7 @@
     </section>
     <section id="contact">
         <div class="container">
-            <i class="fa fa-suitcase"> </i>
+            <!--  <i class="fa fa-suitcase"> </i> -->
             <h1>Travel</h1>
             <p>We know drinking is fun, Sometimes it's so fun that you forget to stop. So here's a list of hotels in the area:</p>
     </section>
