added bridal party, ceremony information

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </li>
                 <li>
                     <a class="about" href="#">
-                        <i class="fa fa-user"></i> Bride &amp; Groom
+                        <i class="fa fa-user"></i>Our Story
                     </a>
                 </li>
                 <li>
@@ -75,15 +75,15 @@
                     <a class="introduction" href="#introduction">Home</a>
                 </li>
                 <li>
-                    <a class="about" href="#about">Bride &amp; Groom</a>
+                    <a class="about" href="#about">Our Story</a>
                 </li>
                 <li> <a class="interests" href="#interests">Wedding</a>
                 </li>
                 <li>
-                    <a class="work" href="#work">Travel</a>
+                    <a class="contact" href="#contact">Travel</a>
                 </li>
                 <li>
-                    <a class="contact" href="#contact">Registry</a>
+                    <a class="footer" href="#footer">Registry</a>
                 </li>
             </ul>
         </div>
@@ -138,7 +138,11 @@
                     <h3>Ceremony</h3>
                     <div class="dash"></div>
                     <p>
-                        The ceremony is at William Penn inn
+                        William Penn Inn
+                        <br> Gwynedd, PA
+                        <br> Friday, May 26, 2017
+                        <br> 6:00 PM
+                        <br> *Adult reception to follow
                     </p>
                     <div class="dash"></div>
                 </div>
@@ -150,6 +154,35 @@
                     <div class="dash"></div>
                     <p>
                         This is also at the william penn inn
+                    </p>
+                    <div class="dash"></div>
+                </div>
+            </div>
+    </section>
+    <br>
+    <section id="interests">
+        <div class="container">
+            <h1>Bridal Party</h1>
+            <div class="row">
+                <div class="column col-md-6">
+                    <div class="flaticon">
+                        <i class="fa fa-female"></i>
+                    </div>
+                    <h3>Bridesmaids</h3>
+                    <div class="dash"></div>
+                    <p>
+                        The bridesmaids are...
+                    </p>
+                    <div class="dash"></div>
+                </div>
+                <div class="column col-md-6">
+                    <div class="flaticon">
+                        <i class="fa fa-male"></i>
+                    </div>
+                    <h3>Groomsmen</h3>
+                    <div class="dash"></div>
+                    <p>
+                        the groomsmen are....
                     </p>
                     <div class="dash"></div>
                 </div>
