updated groomsmen and bridesmaids, fixed nav bar on mobile

--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
     <section id="introduction">
         <div class="small-nav nav">
             <ul>
-                <li>
+                <!-- Might not be a need for this on mobile -->
+               <!--  <li>
                     <a class="introduction" href="#introduction">Home</a>
-                </li>
+                </li> -->
                 <li>
                     <a class="about" href="#about">Our Story</a>
                 </li>
@@ -142,7 +143,7 @@
                         <br> Gwynedd, PA
                         <br> Friday, May 26, 2017
                         <br> 6:00 PM
-                        <br> *Adult reception to follow
+                        <br> Adult reception to follow
                     </p>
                     <div class="dash"></div>
                 </div>
@@ -153,7 +154,10 @@
                     <h3>Reception</h3>
                     <div class="dash"></div>
                     <p>
-                        This is also at the william penn inn
+                        William Penn Inn
+                        <br> Gwynedd, PA
+                        <br> Friday, May 26, 2017
+                        <br> 6:30 PM - 11:30 PM
                     </p>
                     <div class="dash"></div>
                 </div>
@@ -171,7 +175,11 @@
                     <h3>Bridesmaids</h3>
                     <div class="dash"></div>
                     <p>
-                        The bridesmaids are...
+                        Mikela Sotiri
+                        <br> Magenta Surillo
+                        <br> Ashlie Smallbright
+                        <br> Margarida Correia
+                        <br> Natalie Binder
                     </p>
                     <div class="dash"></div>
                 </div>
@@ -182,7 +190,8 @@
                     <h3>Groomsmen</h3>
                     <div class="dash"></div>
                     <p>
-                        the groomsmen are....
+                        Michael L. Rivera
+                        <br> Luis Ortiz
                     </p>
                     <div class="dash"></div>
                 </div>
