updated bridal party, fixed font on nav

--- a/index.html
+++ b/index.html
@@ -175,10 +175,13 @@
                     <h3>Bridesmaids</h3>
                     <div class="dash"></div>
                     <p>
-                        Mikela Sotiri
-                        <br> Magenta Surillo
-                        <br> Ashlie Smallbright
+                        Magenta Surillo
+                        <br> Mikela Sotiri
+                        <br> Kelly Rodrigues
+                        <br> Alynna Ramirez
+                        <br> Sasha Acevedo
                         <br> Margarida Correia
+                        <br> Ashlie Smallbright
                         <br> Natalie Binder
                     </p>
                     <div class="dash"></div>
@@ -192,6 +195,12 @@
                     <p>
                         Michael L. Rivera
                         <br> Luis Ortiz
+                        <br> Efren Rivera
+                        <br> Kevin Rivera
+                        <br> Manouk Hovhannesian
+                        <br> Greg Mol
+                        <br> Justin Joseph
+                        <br> Timothy Vargas
                     </p>
                     <div class="dash"></div>
                 </div>
@@ -207,13 +216,13 @@
         <div class="container">
             <h3>Registry</h3>
             <ul>
-                <li class="github">
+                <li class="target">
                     <a href="https://www.target.com" target="_blank">
                         <i class="fa fa-bullseye"></i>
                         <p>Target</p>
                     </a>
                 </li>
-                <li class="linkedin">
+                <li class="amazon">
                     <a href="https://amazon.com" target="_blank">
                         <i class="fa fa-amazon"></i>
                         <p>Amazon</p>
